# tpaint

./: Cargo.toml  LICENSE  README.md  tailwind.config.js
crates/example_ui/: Cargo.toml
crates/example_ui/src/: lib.rs
crates/tpaint/: Cargo.toml
crates/tpaint/benches/: bench.rs
crates/tpaint/src/: dom.rs  event_loop.rs  events.rs  lib.rs  renderer.rs  tailwind.rs
crates/tpaint/src/components/: image.rs  input.rs  mod.rs  motion.rs
crates/tpaint/src/hooks/: mod.rs  use_animation.rs
crates/tpaint/src/vdom/: event_loop.rs  events.rs  mod.rs  renderer.rs  taffy_vdom.rs  tailwind.rs
crates/tpaint_beuk/: Cargo.toml
crates/tpaint_beuk/src/: lib.rs  tpaint.frag  tpaint.vert
crates/tpaint_glow/: Cargo.toml
crates/tpaint_glow/src/: lib.rs  painter.rs  vao.rs
crates/tpaint_wgpu/: Cargo.toml
crates/tpaint_wgpu/src/: renderer.rs
examples/beuk/: Cargo.toml
examples/beuk/src/: app.rs  main.rs
examples/example_ui/: Cargo.toml
examples/example_ui/src/: lib.rs
examples/glow/: Cargo.toml
examples/glow/src/: app.rs  main.rs
examples/wgpu/: Cargo.toml
examples/wgpu/src/: app.rs  main.rs
src/: main.rs  vdom.rs
src/hooks/: animation.rs
src/vdom/: mod.rs
