[package]
name = "dioxus-native2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.4.0", default-features = false, features = ["macro", "hooks"] }
epaint = { version = "0.22.0", features = ["bytemuck"] }
rustc-hash = "1.1.0"
slotmap = "1.0.6"
smallvec = "1.11.0"
tokio = { version = "1.32.0", features = ["time", "rt"] }
tween = "2.0.1"
uuid = { version = "1.4.1", features = ["v4"] }
