[workspace]
resolver = "2"
members = [
    "crates/tpaint",
    "crates/tpaint_glow",
    "crates/tpaint_wgpu",
    "crates/tpaint_beuk",

    "examples/*",
]

[workspace.dependencies]
dioxus = { version = "0.4.3", default-features = false, features = [
    "macro",
    "hooks",
] }
dioxus-hot-reload = { version = "0.4.3", features = ["file_watcher"] }
