[package]
name = "tpaint"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.4.0", default-features = false, features = ["macro", "hooks"] }
epaint = { git = "https://github.com/emilk/egui", features = ["bytemuck", "default", "log"] }
lazy_static = "1.4.0"
log = "0.4.20"
rustc-hash = "1.1.0"
simple_logger = "4.2.0"
slotmap = "1.0.6"
smallvec = "1.11.0"
taffy = { git = "https://github.com/dioxuslabs/taffy" }
tokio = { version = "1.32.0", features = ["time", "rt", "sync", "macros"] }
tween = "2.0.1"
usvg = { version = "0.35.0", optional = true }
resvg = { version = "0.35.0", optional = true }
image = { version = "0.24.7", optional = true }
uuid = { version = "1.4.1", features = ["v4"] }
winit = "0.28"
copypasta = "0.8.2"
tracing = "0.1"

[features]
default = ["images"]
images = ["dep:image", "dep:resvg", "dep:usvg"]

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "bench"
harness = false