[package]
name = "tpaint_beuk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.13"
tpaint = { path = "../tpaint" }
example_ui = { path = "../../examples/example_ui" }
beuk = { git = "https://github.com/dylanblokhuis/beuk" }
log = "0.4"
slab = "0.4"