[package]
name = "tpaint_wgpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.13"
tpaint = { path = "../tpaint" }
example_ui = { path = "../../examples/example_ui" }
wgpu = "0.18"
log = "0.4"
type-map = "0.5"
