[package]
name = "example_beuk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.4.3", default-features = false, features = [
    "macro",
    "hooks",
] }
tpaint = { path = "../../crates/tpaint" }
tpaint_beuk = { path = "../../crates/tpaint_beuk" }
example_ui = { path = "../example_ui" }
beuk = { git = "https://github.com/dylanblokhuis/beuk" }
log = "0.4"
raw-window-handle = "0.5"
simple_logger = "4.2"
winit = "0.28"

[features]
hot-reload = ["tpaint/hot-reload"]
