[package]
name = "example_ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.4.0", default-features = false, features = ["macro", "hooks"] }
tpaint = { path = "../../crates/tpaint" }
