[package]
name = "example_glow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.28.6"
tpaint = { path = "../../crates/tpaint" }
tpaint_glow = { path = "../../crates/tpaint_glow" }
glutin = "0.30.10"
glutin-winit = "0.3.0"
raw-window-handle = "0.5.2"
glow = "0.12.3"
log = "0.4.20"
simple_logger = "4.2.0"
example_ui = { path = "../example_ui" }