[package]
name = "example_glow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = { version = "0.29", features = ["rwh_05"] }
dioxus = { version = "0.4.3", default-features = false, features = [
    "macro",
    "hooks",
] }
tpaint = { path = "../../crates/tpaint" }
tpaint_glow = { path = "../../crates/tpaint_glow" }
glutin = "0.31.2"
glutin-winit = "0.4.2"
raw-window-handle = "0.5"
glow = "0.13.1"
log = "0.4.20"
simple_logger = "4.2.0"
example_ui = { path = "../example_ui" }

[features]
hot-reload = ["tpaint/hot-reload"]
