[package]
name = "example_wgpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.4.0", default-features = false, features = ["macro", "hooks"] }
tpaint = { path = "../../crates/tpaint" }
tpaint_wgpu = { path = "../../crates/tpaint_wgpu" }
example_ui = { path = "../example_ui" }
wgpu = "0.17"
log = "0.4"
raw-window-handle = "0.5"
simple_logger = "4.2"
winit = "0.28.6"
pollster = "0.3.0"

[features]
hot-reload = ["tpaint/hot-reload"]