[package]
name = "example_wgpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tpaint = { path = "../../crates/tpaint" }
tpaint_wgpu = { path = "../../crates/tpaint_wgpu" }
dioxus = { workspace = true }
example_ui = { path = "../example_ui" }
wgpu = "0.19"
log = "0.4"
simple_logger = "4.2"
winit = { version = "0.29", features = ["rwh_05"] }
pollster = "0.3.0"
tracing-subscriber = { version = "0.3.17", optional = true }
tracing-chrome = { version = "0.7.1", optional = true }
tracing = { version = "0.1", optional = true }

[features]
tracy = ["dep:tracing-subscriber", "dep:tracing-chrome", "dep:tracing"]
hot-reload = ["tpaint/hot-reload"]
